--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test-coverage": "ng test --code-coverage",
+    "build:prod": "ng build --prod",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
