--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,8 @@
     "src/main.ts",
     "src/polyfills.ts"
   ],
-  "include": [
-    "src/**/*.d.ts"
+  "exclude": [
+    "test.ts",
+    "**/*.spec.ts"
   ]
 }
